manifests/competence-profile-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: competence-profile-service-dep
  namespace: osaan-dev
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "4004"
    prometheus.io/scheme: http
    prometheus.io/path: "/actuator/prometheus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: competence-profile-service
  template:
    metadata:
      labels:
        app: competence-profile-service
    spec:
      containers:
        - name: competence-profile-service
          image: miguelsombrero/competence-profile-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
