manifests/competence-profile-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: competence-profile-svc
  namespace: osaan-dev
spec:
  selector:
    app: competence-profile-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: management
      protocol: TCP
      port: 4004
      targetPort: 4004
  type: ClusterIP
