manifests/competence-profile-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: competence-profile-service-route
  namespace: osaan-dev
  labels:
    app: competence-profile-service
spec:
  to:
    kind: Service
    name: competence-profile-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
